fixed error in posting

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
     </div>
     <div>
       <label for="post-body class">Post</label>
-      <textarea id="post-body" wrap="hard" name="post-body" class="new-post-text"></textarea>
+      <textarea id="post-body" wrap="hard" name="post-text" class="new-post-text"></textarea>
     </div>
     <button type="submit" class="btn">Create</button>
   </form>
